--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-promise-modals",
-  "version": "2.0.0+ghost.4",
+  "name": "@tryghost/ember-promise-modals",
+  "version": "2.0.1",
   "description": "The better way to handle modals in your Ember.js apps.",
   "keywords": [
     "ember-addon"
